# greCy-pypi

./: pyproject.toml  requirements.txt
grecy/: __main__.py  connections.py
grecy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
